# moderncpp-project-template

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt
cmake/: compiler_options.cmake
project/: CMakeLists.txt
project/appbin/: CMakelists.txt
project/appbin/archive/: CMakeLists.txt  app_imgui_implot.cpp
project/appbin/src/: CMakeLists.txt  hello.cpp
project/helloapp/src/: helloapp.cpp
project/hellolib/: CMakeLists.txt
project/hellolib/include/: hellolib.h
project/hellolib/src/: hellolib.cpp
